[package]
name = "hyper-throttle"
version = "0.1.1"
edition = "2021"
resolver = "2"

description = "bandwidth throttle for hyper"
license = "MIT"
repository = "https://github.com/Hakuyume/hyper-throttle"

[package.metadata.docs.rs]
all-features = true

[dependencies]
http = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy"], optional = true }
pin-project = "1"
tower-service = "0.3"

[dev-dependencies]
bytes = "1"
futures = "0.3"
http-body-util = "0.1"
hyper-rustls = { version = "0.26", features = ["http1", "http2"] }
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
hyper-throttle = { path = ".", features = ["hyper-util"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "tokio"] }
tokio = { version = "1", features = ["macros"] }
